refactor: Move policy plugins management from the gateway to gravitee-plugin-policy to share it with management-api

--- a/gravitee-management-api-service/pom.xml
+++ b/gravitee-management-api-service/pom.xml
@@ -58,7 +58,8 @@
 
 		<dependency>
 			<groupId>io.gravitee.plugin</groupId>
-			<artifactId>gravitee-plugin-core</artifactId>
+			<artifactId>gravitee-plugin-policy</artifactId>
+			<version>${gravitee-plugin-policy.version}</version>
 		</dependency>
 
 		<!-- Spring dependencies -->
