fix: Local registry manifest was not correct. Also includes it in the final distribution by default as a plugin

--- a/gravitee-gateway-services/gravitee-gateway-services-localregistry/src/main/resources/plugin.properties
+++ b/gravitee-gateway-services/gravitee-gateway-services-localregistry/src/main/resources/plugin.properties
@@ -1,6 +1,6 @@
-id=sync
+id=localregistry
 name=${project.name}
 version=${project.version}
 description=${project.description}
-class=io.gravitee.gateway.services.sync.ScheduledSyncService
+class=io.gravitee.gateway.services.localregistry.LocalApiDefinitionRegistry
 type=service
