--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "angular-ui-router": "~0.2.15",
     "angular-material": "0.11.3",
     "malarkey": "yuanqing/malarkey#~1.3.0",
-    "moment": "~2.10.3",
+    "moment": "momentjs#~2.10.6",
     "animate.css": "~3.3.0",
     "angular": "~1.4.0",
     "angular-drag-and-drop-lists": "~1.2.0",
@@ -18,7 +18,8 @@
     "angular-ui-codemirror": "~0.3.0",
     "angular-material-data-table": "~0.8.14",
     "highcharts": "~4.1.9",
-    "highcharts-ng": "~0.0.11"
+    "highcharts-ng": "~0.0.11",
+    "lodash": "~3.10.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
