--- a/bower.json
+++ b/bower.json
@@ -11,17 +11,29 @@
     "angular": "~1.4.0",
     "angular-drag-and-drop-lists": "~1.2.0",
     "angular-markdown-directive": "~0.3.1",
-    "angular-swagger-ui": "~0.2.3",
+    "angular-swagger-ui": "~0.2.7",
     "angular-cookies": "~1.4.0",
     "jquery": "~2.1.4",
     "bootstrap-sass": "3.3.5",
-    "angular-ui-codemirror": "~0.3.0",
     "angular-material-data-table": "~0.8.14",
     "highcharts": "~4.1.9",
     "highcharts-ng": "~0.0.11",
-    "lodash": "~3.10.1"
+    "lodash": "~3.10.1",
+    "api-console": "~2.0.4",
+    "angular-material-icons": "~0.6.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
+  },
+  "resolutions": {
+    "angular": "1.4.8"
+  },
+  "overrides": {
+    "api-console": {
+      "main": ["./dist/scripts/api-console.js", "./dist/styles/api-console-light-theme.css"]
+    },
+    "angular-material-icons": {
+      "main": ["./angular-material-icons.js"]
+    }
   }
 }
