refactor: first version of API portal + quality code

--- a/.jshintrc
+++ b/.jshintrc
@@ -19,6 +19,7 @@
     "clearInterval": false,
     "FileReader": false,
     "btoa": false,
-    "Highcharts": false
+    "Highcharts": false,
+    "moment": false
   }
 }
