--- a/bower.json
+++ b/bower.json
@@ -18,17 +18,23 @@
     "dragular": "~3.2.0",
     "lodash": "~3.10.1",
     "api-console": "~2.0.4",
-    "angular-material-icons": "~0.6.0"
+    "angular-material-icons": "~0.6.0",
+    "Read-More-Directive": "git@github.com:andoulla/Read-More-Directive.git"
   },
   "resolutions": {
     "angular": "1.4.8"
   },
   "overrides": {
     "api-console": {
-      "main": ["./dist/scripts/api-console.js", "./dist/styles/api-console-light-theme.css"]
+      "main": [
+        "./dist/scripts/api-console.js",
+        "./dist/styles/api-console-light-theme.css"
+      ]
     },
     "angular-material-icons": {
-      "main": ["./angular-material-icons.js"]
+      "main": [
+        "./angular-material-icons.js"
+      ]
     }
   }
 }
