--- a/bower.json
+++ b/bower.json
@@ -15,12 +15,13 @@
     "angular-material-data-table": "~0.8.14",
     "highcharts": "~4.1.9",
     "highcharts-ng": "~0.0.11",
-    "dragular": "~3.2.0",
     "lodash": "~3.10.1",
     "api-console": "~2.0.4",
     "angular-material-icons": "~0.6.0",
     "Read-More-Directive": "git@github.com:andoulla/Read-More-Directive.git",
-    "moment": "momentjs#~2.10.6"
+    "moment": "momentjs#~2.10.6",
+    "dragular": "~3.2.0",
+    "angular-dragula": "~1.1.6"
   },
   "resolutions": {
     "angular": "1.4.8"
