--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "Read-More-Directive": "git@github.com:andoulla/Read-More-Directive.git",
     "moment": "momentjs#~2.10.6",
     "dragular": "~3.2.0",
-    "angular-dragula": "~1.1.6"
+    "angular-dragula": "~1.1.6",
+    "angular-breadcrumb": "~0.4.1"
   },
   "resolutions": {
     "angular": "1.4.8"
