--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "moment": "momentjs#~2.10.6",
     "dragular": "~3.2.0",
     "angular-dragula": "~1.1.6",
-    "angular-breadcrumb": "~0.4.1"
+    "angular-breadcrumb": "~0.4.1",
+    "google-code-prettify": "~1.0.4"
   },
   "resolutions": {
     "angular": "1.4.8"
