--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,12 @@
 				<artifactId>gravitee-plugin-core</artifactId>
 				<version>${gravitee-plugin-core.version}</version>
 			</dependency>
+
+			<dependency>
+				<groupId>io.gravitee.plugin</groupId>
+				<artifactId>gravitee-plugin-policy</artifactId>
+				<version>${gravitee-plugin-policy.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
