--- a/gravitee-gateway-http-client/gravitee-gateway-http-client-vertx/pom.xml
+++ b/gravitee-gateway-http-client/gravitee-gateway-http-client-vertx/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>io.gravitee.gateway.http</groupId>
         <artifactId>gravitee-gateway-http-client</artifactId>
-        <version>0.4.0-SNAPSHOT</version>
+        <version>0.4.0</version>
     </parent>
 
     <artifactId>gravitee-gateway-http-client-vertx</artifactId>
