--- a/pom.xml
+++ b/pom.xml
@@ -28,15 +28,15 @@
 
 	<groupId>io.gravitee.reporter</groupId>
 	<artifactId>gravitee-reporter-file</artifactId>
-	<version>0.3.0-SNAPSHOT</version>
+	<version>0.3.0</version>
 	<packaging>jar</packaging>
 
 	<name>Gravitee IO - Gateway File Reporter</name>
 
 	<properties>
 		<!-- Gravitee's project versions -->
-		<gravitee-gateway-api.version>0.4.0-SNAPSHOT</gravitee-gateway-api.version>
-		<gravitee-reporter-api.version>0.4.0-SNAPSHOT</gravitee-reporter-api.version>
+		<gravitee-gateway-api.version>0.4.0</gravitee-gateway-api.version>
+		<gravitee-reporter-api.version>0.4.0</gravitee-reporter-api.version>
 		<gravitee-common.version>0.2.0</gravitee-common.version>
 
 		<!-- External project versions -->
