--- a/gravitee-management-api-war/pom.xml
+++ b/gravitee-management-api-war/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>io.gravitee.management</groupId>
 		<artifactId>gravitee-management-api</artifactId>
-		<version>0.4.0</version>
+		<version>0.5.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>gravitee-management-api-war</artifactId>
