--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,7 @@
     </dependencies>
 
     <properties>
-        <gravitee-definition.version>0.4.0</gravitee-definition.version>
+        <gravitee-definition.version>0.5.0-SNAPSHOT</gravitee-definition.version>
         <gravitee-common.version>0.2.0</gravitee-common.version>
         <gravitee-repository.version>0.4.0</gravitee-repository.version>
         <gravitee-plugin-core.version>0.4.0</gravitee-plugin-core.version>
