--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "dragular": "~3.2.0",
     "angular-breadcrumb": "~0.4.1",
     "google-code-prettify": "~1.0.4",
-    "angular-schema-form": "~0.8.12"
+    "angular-schema-form": "~0.8.12",
+    "ngclipboard": "~1.0.0"
   },
   "resolutions": {
     "angular": "1.4.8"
