--- a/pom.xml
+++ b/pom.xml
@@ -145,7 +145,7 @@
         <gravitee-plugin-core.version>0.4.0</gravitee-plugin-core.version>
         <gravitee-plugin-policy.version>0.4.0</gravitee-plugin-policy.version>
         <gravitee-policy-api.version>0.4.0</gravitee-policy-api.version>
-        <gravitee-gateway-api.version>0.4.0</gravitee-gateway-api.version>
+        <gravitee-gateway-api.version>0.5.0-SNAPSHOT</gravitee-gateway-api.version>
         <gravitee-repository-jdbc.version>0.3.0</gravitee-repository-jdbc.version>
         <gravitee-repository-mongodb.version>0.4.0</gravitee-repository-mongodb.version>
 
