--- a/pom.xml
+++ b/pom.xml
@@ -141,7 +141,7 @@
     <properties>
         <gravitee-definition.version>0.5.0-SNAPSHOT</gravitee-definition.version>
         <gravitee-common.version>0.2.0</gravitee-common.version>
-        <gravitee-repository.version>0.4.0</gravitee-repository.version>
+        <gravitee-repository.version>0.5.0-SNAPSHOT</gravitee-repository.version>
         <gravitee-plugin-core.version>0.4.0</gravitee-plugin-core.version>
         <gravitee-plugin-policy.version>0.4.0</gravitee-plugin-policy.version>
         <gravitee-policy-api.version>0.5.0-SNAPSHOT</gravitee-policy-api.version>
