--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
 		<gravitee-repository-elasticsearch.version>0.4.0</gravitee-repository-elasticsearch.version>
 		<gravitee-repository-mongodb.version>0.4.0</gravitee-repository-mongodb.version>
 		<gravitee-repository-jdbc.version>0.3.0</gravitee-repository-jdbc.version>
+		<gravitee-gateway-api.version>0.5.0-SNAPSHOT</gravitee-gateway-api.version>
 
 		<apacheds-server-jndi.version>1.5.5</apacheds-server-jndi.version>
 		<jackson.version>2.5.3</jackson.version>
@@ -118,6 +119,12 @@
 				<groupId>io.gravitee.plugin</groupId>
 				<artifactId>gravitee-plugin-policy</artifactId>
 				<version>${gravitee-plugin-policy.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>io.gravitee.gateway</groupId>
+				<artifactId>gravitee-gateway-api</artifactId>
+				<version>${gravitee-gateway-api.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
