feat: send an email notification when a user is added as a member of an API/Application, this closes #7

--- a/gravitee-management-api-service/pom.xml
+++ b/gravitee-management-api-service/pom.xml
@@ -19,6 +19,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<properties>
+		<jsoup.version>1.8.3</jsoup.version>
+	</properties>
 
 	<parent>
 		<groupId>io.gravitee.management</groupId>
@@ -72,7 +75,14 @@
 			<artifactId>spring-tx</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		
+
+		<!-- HTML Parser -->
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>${jsoup.version}</version>
+		</dependency>
+
 		<!-- Test dependencies -->
 		<dependency>
 			<groupId>junit</groupId>
