--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,8 @@
 		<spring.security.version>4.0.3.RELEASE</spring.security.version>
 		<spring.security.oauth2.version>2.0.8.RELEASE</spring.security.oauth2.version>
 		<validation-api.version>1.1.0.Final</validation-api.version>
+		<mail.version>1.4.7</mail.version>
+		<freemarker.version>2.3.22</freemarker.version>
 	</properties>
 
 	<modules>
@@ -143,6 +145,21 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>${mail.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>${freemarker.version}</version>
 		</dependency>
 	</dependencies>
 </project>
