--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "gravitee-management-webui",
-  "version": "0.4.0",
+  "version": "0.5.0-SNAPSHOT",
   "description": "Gravitee IO - API Management - Admin - Web Console",
   "dependencies": {
     "angular-ui-router": "~0.2.15",
