--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "angular-breadcrumb": "~0.4.1",
     "google-code-prettify": "~1.0.4",
     "angular-schema-form": "~0.8.12",
-    "ngclipboard": "~1.0.0"
+    "ngclipboard": "~1.0.0",
+    "ngSticky": "~1.8.7"
   },
   "resolutions": {
     "angular": "1.4.8"
