feat: send an email notification when an API key is revoked, this closes #5

--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,9 @@
 		<gravitee-definition.version>0.5.0-SNAPSHOT</gravitee-definition.version>
 		<gravitee-plugin-core.version>0.5.0-SNAPSHOT</gravitee-plugin-core.version>
 		<gravitee-plugin-policy.version>0.5.0-SNAPSHOT</gravitee-plugin-policy.version>
-		<gravitee-repository.version>0.4.0</gravitee-repository.version>
+		<gravitee-repository.version>0.5.0-SNAPSHOT</gravitee-repository.version>
 		<gravitee-repository-elasticsearch.version>0.5.0-SNAPSHOT</gravitee-repository-elasticsearch.version>
-		<gravitee-repository-mongodb.version>0.4.0</gravitee-repository-mongodb.version>
+		<gravitee-repository-mongodb.version>0.5.0-SNAPSHOT</gravitee-repository-mongodb.version>
 		<gravitee-repository-jdbc.version>0.3.0</gravitee-repository-jdbc.version>
 		<gravitee-gateway-api.version>0.5.0-SNAPSHOT</gravitee-gateway-api.version>
 
