--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,11 @@
 
 	<groupId>io.gravitee.repository</groupId>
 	<artifactId>gravitee-repository-mongodb</artifactId>
-	<version>0.5.0-SNAPSHOT</version>
+	<version>0.5.0</version>
 	<name>Gravitee IO - Repository MongoDB</name>
 
 	<properties>
-		<gravitee-repository.version>0.5.0-SNAPSHOT</gravitee-repository.version>
+		<gravitee-repository.version>0.5.0</gravitee-repository.version>
 		<embed.mongo.version>1.47.3</embed.mongo.version>
 		<embedmongo-maven-plugin.version>0.1.12</embedmongo-maven-plugin.version>
 		<mongo.version>3.0.2</mongo.version>
