--- a/pom.xml
+++ b/pom.xml
@@ -133,14 +133,14 @@
     </dependencies>
 
     <properties>
-        <gravitee-definition.version>0.5.0</gravitee-definition.version>
+        <gravitee-definition.version>0.6.0-SNAPSHOT</gravitee-definition.version>
         <gravitee-common.version>0.2.0</gravitee-common.version>
         <gravitee-repository.version>0.5.0</gravitee-repository.version>
         <gravitee-plugin-core.version>0.5.0</gravitee-plugin-core.version>
         <gravitee-plugin-policy.version>0.5.0</gravitee-plugin-policy.version>
         <gravitee-policy-api.version>0.5.0</gravitee-policy-api.version>
-        <gravitee-gateway-api.version>0.5.0</gravitee-gateway-api.version>
-        <gravitee-repository-mongodb.version>0.5.0</gravitee-repository-mongodb.version>
+        <gravitee-gateway-api.version>0.6.0-SNAPSHOT</gravitee-gateway-api.version>
+        <gravitee-repository-mongodb.version>0.6.0-SNAPSHOT</gravitee-repository-mongodb.version>
 
         <jackson.version>2.5.3</jackson.version>
         <vertx.version>3.2.0</vertx.version>
