--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,9 @@
     "ngclipboard": "~1.1.0",
     "angular-ui-validate": "~1.2.2",
     "angular-messages": "~1.4.9",
-    "v-accordion": "~1.4.1"
+    "v-accordion": "~1.4.1",
+    "angular-timeline": "~1.6.2",
+    "jsdiff": "~2.2.1"
   },
   "resolutions": {
     "angular": "~1.4.9",
