--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,10 @@
 		<gravitee-definition.version>0.5.0</gravitee-definition.version>
 		<gravitee-plugin-core.version>0.5.0</gravitee-plugin-core.version>
 		<gravitee-plugin-policy.version>0.5.0</gravitee-plugin-policy.version>
-		<gravitee-repository.version>0.5.0</gravitee-repository.version>
+		<gravitee-repository.version>0.6.0-SNAPSHOT</gravitee-repository.version>
 		<gravitee-repository-elasticsearch.version>0.5.0</gravitee-repository-elasticsearch.version>
 		<gravitee-repository-mongodb.version>0.5.0</gravitee-repository-mongodb.version>
+		<gravitee-repository-couchbase.version>0.1.0-SNAPSHOT</gravitee-repository-couchbase.version>
 		<gravitee-repository-jdbc.version>0.3.0</gravitee-repository-jdbc.version>
 		<gravitee-gateway-api.version>0.5.0</gravitee-gateway-api.version>
 
@@ -97,6 +98,11 @@
 				<groupId>io.gravitee.repository</groupId>
 				<artifactId>gravitee-repository-mongodb</artifactId>
 				<version>${gravitee-repository-mongodb.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.gravitee.repository</groupId>
+				<artifactId>gravitee-repository-couchbase</artifactId>
+				<version>${gravitee-repository-couchbase.version}</version>
 			</dependency>
 
 			<dependency>
