--- a/pom.xml
+++ b/pom.xml
@@ -134,7 +134,7 @@
 
     <properties>
         <gravitee-definition.version>0.6.0-SNAPSHOT</gravitee-definition.version>
-        <gravitee-common.version>0.2.0</gravitee-common.version>
+        <gravitee-common.version>0.3.0-SNAPSHOT</gravitee-common.version>
         <gravitee-repository.version>0.5.0</gravitee-repository.version>
         <gravitee-plugin-core.version>0.5.0</gravitee-plugin-core.version>
         <gravitee-plugin-policy.version>0.5.0</gravitee-plugin-policy.version>
