--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 		<gravitee-plugin-policy.version>0.5.0</gravitee-plugin-policy.version>
 		<gravitee-repository.version>0.6.0-SNAPSHOT</gravitee-repository.version>
 		<gravitee-repository-elasticsearch.version>0.5.0</gravitee-repository-elasticsearch.version>
-		<gravitee-repository-mongodb.version>0.5.0</gravitee-repository-mongodb.version>
+		<gravitee-repository-mongodb.version>0.6.0-SNAPSHOT</gravitee-repository-mongodb.version>
 		<gravitee-repository-couchbase.version>0.1.0-SNAPSHOT</gravitee-repository-couchbase.version>
 		<gravitee-repository-jdbc.version>0.3.0</gravitee-repository-jdbc.version>
 		<gravitee-gateway-api.version>0.5.0</gravitee-gateway-api.version>
