--- a/jackson/pom.xml
+++ b/jackson/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>io.gravitee.definition</groupId>
         <artifactId>gravitee-definition</artifactId>
-        <version>0.6.0-SNAPSHOT</version>
+        <version>0.6.0</version>
     </parent>
 
     <artifactId>gravitee-definition-jackson</artifactId>
