--- a/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/pom.xml
+++ b/gravitee-management-api-standalone/gravitee-management-api-standalone-distribution/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>io.gravitee.management.standalone</groupId>
 		<artifactId>gravitee-management-api-standalone</artifactId>
-		<version>0.6.0-SNAPSHOT</version>
+		<version>0.6.0</version>
 	</parent>
 
 	<artifactId>gravitee-management-api-standalone-distribution</artifactId>
