--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 	<name>Gravitee IO - Repository MongoDB</name>
 
 	<properties>
-		<gravitee-repository.version>0.6.0</gravitee-repository.version>
+		<gravitee-repository.version>0.7.0-SNAPSHOT</gravitee-repository.version>
 		<embed.mongo.version>1.47.3</embed.mongo.version>
 		<embedmongo-maven-plugin.version>0.1.12</embedmongo-maven-plugin.version>
 		<mongo.version>3.0.4</mongo.version>
