--- a/pom.xml
+++ b/pom.xml
@@ -133,7 +133,7 @@
     </dependencies>
 
     <properties>
-        <gravitee-definition.version>0.6.0</gravitee-definition.version>
+        <gravitee-definition.version>0.7.0-SNAPSHOT</gravitee-definition.version>
         <gravitee-common.version>0.4.0-SNAPSHOT</gravitee-common.version>
         <gravitee-repository.version>0.7.0-SNAPSHOT</gravitee-repository.version>
         <gravitee-plugin-core.version>0.5.0</gravitee-plugin-core.version>
