--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,8 @@
 		<mongo.version>3.0.4</mongo.version>
 		<spring.data.mongodb.version>1.7.2.RELEASE</spring.data.mongodb.version>
 		<dozer.version>5.4.0</dozer.version>
+		<gravitee-repository-test.version>0.1.0-SNAPSHOT</gravitee-repository-test.version>
+		<maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -100,30 +102,25 @@
             <version>${mongo.version}</version>
         </dependency>
 
-		<!-- Test dependencies -->
-		<dependency>
-			<groupId>de.flapdoodle.embed</groupId>
-			<artifactId>de.flapdoodle.embed.mongo</artifactId>
-			<version>${embed.mongo.version}</version>
-			<scope>test</scope>
-		</dependency>
+        <!-- Test dependencies -->
+        <dependency>
+            <groupId>de.flapdoodle.embed</groupId>
+            <artifactId>de.flapdoodle.embed.mongo</artifactId>
+            <version>${embed.mongo.version}</version>
+            <scope>test</scope>
+        </dependency>
 
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>io.gravitee.repository</groupId>
+            <artifactId>gravitee-repository-test</artifactId>
+            <version>${gravitee-repository-test.version}</version>
+            <classifier>tests</classifier>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
-	<build>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-			</resource>
-		</resources>
-		<plugins>
+    <build>
+        <plugins>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>2.4</version>
@@ -143,6 +140,26 @@
 					</execution>
 				</executions>
 			</plugin>
-		</plugins>
-	</build>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>${maven-dependency-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>unpack-repository-tests</id>
+                        <phase>test-compile</phase>
+                        <goals>
+                            <goal>unpack-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <includeGroupIds>io.gravitee.repository</includeGroupIds>
+                            <includeArtifactIds>gravitee-repository-test</includeArtifactIds>
+                            <includeClassifiers>tests</includeClassifiers>
+                            <outputDirectory>${project.build.directory}/test-classes</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
