--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 	<groupId>io.gravitee.repository</groupId>
 	<artifactId>gravitee-repository-redis</artifactId>
 	<version>0.3.0-SNAPSHOT</version>
-	<name>Gravitee IO - Repository - Redis</name>
+	<name>Gravitee IO - API Management - Repository Redis</name>
 
 	<properties>
 		<jedis.version>2.8.0</jedis.version>
@@ -101,10 +101,28 @@
 			<version>${spring.version}</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.github.spullara.redis</groupId>
+			<artifactId>netty4-server</artifactId>
+			<version>0.7</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+				<configuration>
+					<includes>
+						<include>RedisManagementSuiteTest.java</include>
+						<include>RedisRateLimitSuiteTest.java</include>
+					</includes>
+				</configuration>
+			</plugin>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>2.4</version>
