chore: Fix build number / build id / git commit

--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-container/src/main/resources/version.properties
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-container/src/main/resources/version.properties
@@ -1,4 +1,4 @@
-build-id=${project.version}
-build-version=Gravitee Standalone Gateway ${project.version}
+build-id=${env.BUILD_ID}
+build-version=${env.BUILD_NUMBER}
 major-version=${project.version}
-revision=${buildNumber}
+revision=${env.GIT_COMMIT}
