--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 	<name>Gravitee IO - Management</name>
 
 	<properties>
-		<gravitee-common.version>0.3.0</gravitee-common.version>
+		<gravitee-common.version>0.4.0-SNAPSHOT</gravitee-common.version>
 		<gravitee-definition.version>0.7.0-SNAPSHOT</gravitee-definition.version>
 		<gravitee-plugin-core.version>0.5.0</gravitee-plugin-core.version>
 		<gravitee-plugin-policy.version>0.5.0</gravitee-plugin-policy.version>
