--- a/gravitee-management-api-standalone/gravitee-management-api-standalone-container/pom.xml
+++ b/gravitee-management-api-standalone/gravitee-management-api-standalone-container/pom.xml
@@ -30,6 +30,15 @@
     <artifactId>gravitee-management-api-standalone-container</artifactId>
     <name>Gravitee IO - Management - Standalone - Container</name>
 
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+    </build>
+
     <dependencies>
         <!-- Gravitee Management dependencies -->
         <dependency>
