--- a/gravitee-management-api-providers/gravitee-management-api-providers-memory/pom.xml
+++ b/gravitee-management-api-providers/gravitee-management-api-providers-memory/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>io.gravitee.management.providers</groupId>
         <artifactId>gravitee-management-api-providers</artifactId>
-        <version>0.7.0-SNAPSHOT</version>
+        <version>0.7.0</version>
     </parent>
 
     <artifactId>gravitee-management-api-providers-memory</artifactId>
