--- a/pom.xml
+++ b/pom.xml
@@ -30,20 +30,20 @@
 	<artifactId>gravitee-management-api</artifactId>
 	<packaging>pom</packaging>
 
-	<version>0.7.0-SNAPSHOT</version>
+	<version>0.7.0</version>
 	<name>Gravitee IO - Management</name>
 
 	<properties>
-		<gravitee-common.version>0.4.0-SNAPSHOT</gravitee-common.version>
-		<gravitee-definition.version>0.7.0-SNAPSHOT</gravitee-definition.version>
+		<gravitee-common.version>0.4.0</gravitee-common.version>
+		<gravitee-definition.version>0.7.0</gravitee-definition.version>
 		<gravitee-plugin-core.version>0.5.0</gravitee-plugin-core.version>
 		<gravitee-plugin-policy.version>0.5.0</gravitee-plugin-policy.version>
-		<gravitee-repository.version>0.7.0-SNAPSHOT</gravitee-repository.version>
-		<gravitee-repository-elasticsearch.version>0.6.0-SNAPSHOT</gravitee-repository-elasticsearch.version>
-		<gravitee-repository-mongodb.version>0.7.0-SNAPSHOT</gravitee-repository-mongodb.version>
+		<gravitee-repository.version>0.7.0</gravitee-repository.version>
+		<gravitee-repository-elasticsearch.version>0.6.0</gravitee-repository-elasticsearch.version>
+		<gravitee-repository-mongodb.version>0.7.0</gravitee-repository-mongodb.version>
 		<gravitee-repository-couchbase.version>0.1.0-SNAPSHOT</gravitee-repository-couchbase.version>
 		<gravitee-repository-jdbc.version>0.3.0</gravitee-repository-jdbc.version>
-		<gravitee-gateway-api.version>0.6.0</gravitee-gateway-api.version>
+		<gravitee-gateway-api.version>0.7.0</gravitee-gateway-api.version>
 
 		<apacheds-server-jndi.version>1.5.5</apacheds-server-jndi.version>
 		<jackson.version>2.5.3</jackson.version>
