refactor: Rename monitoring service to healthcheck
Healthcheck is dedicated to monitor API's endpoints while monitoring service is used to monitor the gateway itself

--- a/gravitee-gateway-services/gravitee-gateway-services-healthcheck/pom.xml
+++ b/gravitee-gateway-services/gravitee-gateway-services-healthcheck/pom.xml
@@ -27,8 +27,8 @@
         <version>0.8.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>gravitee-gateway-services-monitoring</artifactId>
-    <name>Gravitee IO - Gateway - Services - Monitoring</name>
+    <artifactId>gravitee-gateway-services-healthcheck</artifactId>
+    <name>Gravitee IO - Gateway - Services - Health Check</name>
 
     <dependencies>
         <!-- Gravitee.io dependencies -->
