--- a/gravitee-gateway-services/gravitee-gateway-services-healthcheck/src/main/resources/plugin.properties
+++ b/gravitee-gateway-services/gravitee-gateway-services-healthcheck/src/main/resources/plugin.properties
@@ -1,6 +1,6 @@
-id=monitoring
+id=healthcheck
 name=${project.name}
 version=${project.version}
 description=${project.description}
-class=io.gravitee.gateway.services.monitoring.MonitoringService
+class=io.gravitee.gateway.services.healthcheck.HealthCheckService
 type=service
