--- a/gravitee-gateway-services/pom.xml
+++ b/gravitee-gateway-services/pom.xml
@@ -37,5 +37,6 @@
         <module>gravitee-gateway-services-sync</module>
         <module>gravitee-gateway-services-healthcheck</module>
         <module>gravitee-gateway-services-apikeyscache</module>
+        <module>gravitee-gateway-services-monitoring</module>
     </modules>
 </project>
