chore: Do not put service's 3rd parties into lib/ext

--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/pom.xml
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/pom.xml
@@ -68,6 +68,7 @@
             <artifactId>gravitee-gateway-services-healthcheck</artifactId>
             <version>${project.version}</version>
             <type>zip</type>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
@@ -75,6 +76,7 @@
             <artifactId>gravitee-gateway-services-sync</artifactId>
             <version>${project.version}</version>
             <type>zip</type>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
@@ -89,6 +91,15 @@
             <artifactId>gravitee-gateway-services-apikeyscache</artifactId>
             <version>${project.version}</version>
             <type>zip</type>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.gravitee.repository</groupId>
+            <artifactId>gravitee-repository-mongodb</artifactId>
+            <version>${gravitee-repository-mongodb.version}</version>
+            <type>zip</type>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
     
