--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,12 @@
             </dependency>
 
             <dependency>
+                <groupId>io.gravitee.reporter</groupId>
+                <artifactId>gravitee-reporter-api</artifactId>
+                <version>${gravitee-reporter-api.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>io.gravitee.plugin</groupId>
                 <artifactId>gravitee-plugin-core</artifactId>
                 <version>${gravitee-plugin-core.version}</version>
@@ -136,11 +142,12 @@
         <gravitee-definition.version>0.7.0</gravitee-definition.version>
         <gravitee-common.version>0.5.0-SNAPSHOT</gravitee-common.version>
         <gravitee-repository.version>0.8.0-SNAPSHOT</gravitee-repository.version>
-        <gravitee-plugin-core.version>0.5.0</gravitee-plugin-core.version>
-        <gravitee-plugin-policy.version>0.5.0</gravitee-plugin-policy.version>
+        <gravitee-plugin-core.version>0.6.0-SNAPSHOT</gravitee-plugin-core.version>
+        <gravitee-plugin-policy.version>0.6.0-SNAPSHOT</gravitee-plugin-policy.version>
         <gravitee-policy-api.version>0.5.0</gravitee-policy-api.version>
         <gravitee-gateway-api.version>0.8.0-SNAPSHOT</gravitee-gateway-api.version>
         <gravitee-repository-mongodb.version>0.8.0-SNAPSHOT</gravitee-repository-mongodb.version>
+        <gravitee-reporter-api.version>0.6.0-SNAPSHOT</gravitee-reporter-api.version>
         <jackson.version>2.5.3</jackson.version>
         <vertx.version>3.2.1</vertx.version>
         <jetty.version>9.3.3.v20150827</jetty.version>
