chore: Fix scope for service plugins

--- a/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/pom.xml
+++ b/gravitee-gateway-standalone/gravitee-gateway-standalone-distribution/pom.xml
@@ -84,6 +84,7 @@
             <artifactId>gravitee-gateway-services-localregistry</artifactId>
             <version>${project.version}</version>
             <type>zip</type>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
